# bevy_offscreen

./: Cargo.toml
assets/: color_id.wgsl  grayscale_color.wgsl
examples/: grayscale_colors.rs
src/: lib.rs  sync.rs
