[package]
name = "bevy_offscreen"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = "0.17.3"
bevy_asset = "0.17.3"
bevy_camera = "0.17.3"
bevy_ecs = "0.17.3"
bevy_image = "0.17.3"
bevy_math = "0.17.3"
bevy_window = "0.17.3"
wgpu-types = "26.0.0"

[dev-dependencies]
bevy = "0.17.3"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
